--- a/.env
+++ b/.env
@@ -17,3 +17,19 @@
 APP_ENV=dev
 APP_SECRET=dfbd063fda2258c9c194126c2ae0b4c9
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+ DATABASE_URL="mysql://root:root@127.0.0.1:3306/authentifiactiondouble?serverVersion=5.7"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_DSN=smtp://248fa4b2854860:19260a084f36fe@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+###< symfony/swiftmailer-bundle ###
